--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
         </section>
       </main>
       <footer class="footer page__section">
-        <p class="footer__copyright">© 2025 Around The U.S.</p>
+        <p class="footer__copyright">&copy; 2025 Around The U.S.</p>
       </footer>
       <div class="popup" id="edit-popup">
         <div class="popup__content">
@@ -149,5 +149,6 @@
       </div>
     </div>
     <script src="./scripts/index.js"></script>
+    <script src="./scripts/validate.js"></script>
   </body>
 </html>
